# nano-endpoint-1

./: .gitignore  DOCS_ANALYSIS.md  GITHUB_PUSH.md  PRODUCTION_ASSESSMENT.md  PSEUDOCODE.md  README.md  STARTING_THE_SERVER.md  pyproject.toml  response.md  server.py
orin-nano/: README  cheat-sheet.md  cloud-save-implementation.md  docs.md
proxy/: __init__.py  app.py  brave_client.py  embeddings_client.py  logging_config.py  save_service.py  security.py  supabase_client.py
qwen3/: Qwen.html  README.md  tool-use.md
scripts/: benchmark.py
src/orin_text/: __init__.py  cli.py  client.py  config.py  errors.py  logging_config.py  models.py  service.py
tests/: test_brave_client.py  test_client.py  test_live_endpoint.py  test_logging.py  test_proxy_app.py  test_proxy_security.py  test_save.py  test_service.py
web/: DESIGN.md  PSEUDOCODE.md  README.md  chat.js  context.js  db.js  endpoint.js  index.html  logger.js  markdown.js  save.js  styles.css  summary.js  tools.js  ui.js
web/tests/: browser-smoke.html  browser-smoke.js  browser-ui-smoke.ps1  endpoint.test.mjs  fake-proxy-server.py  logger.test.mjs  memory.test.mjs  save.test.mjs  tools.test.mjs
