[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "orin-private-text"
version = "0.1.0"
description = "Private text operations through the Jetson Orin Nano qwen3:1.7b endpoint"
requires-python = ">=3.11"
dependencies = []

[project.scripts]
orin-text = "orin_text.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

